--- a/styles/QuestionId.module.css
+++ b/styles/QuestionId.module.css
@@ -55,6 +55,7 @@
   font-size: 16px;
   line-height: 1.6;
   margin-bottom: 20px;
+  width: 100%;
 }
 
 .comments-section {
@@ -147,5 +148,8 @@
   .tags-container {
     margin-right: 0;
     margin-bottom: 10px;
+  }
+  .question-text{
+    font-size: 10px;
   }
 }
